Modify scan endpoint to accept list of targets per scan request
